Bug 151954 - LibreOffice Writer deletes paragraph breaks while moving text in ”track changes” mode
Summary: LibreOffice Writer deletes paragraph breaks while moving text in ”track chang...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2022-11-08 10:52 UTC by wojciech
Modified: 2022-11-28 09:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
MS Word, original file, changes shown (5.05 KB, image/png)
2022-11-08 10:53 UTC, wojciech
Details
MS Word, original file, changes hidden (3.78 KB, image/png)
2022-11-08 10:54 UTC, wojciech
Details
File reopened in LibreOffice Writer, changes shown (9.40 KB, image/png)
2022-11-08 10:55 UTC, wojciech
Details
File reopened in LibreOffice Writer, changes hidden (6.82 KB, image/png)
2022-11-08 10:55 UTC, wojciech
Details
Document reopened in LibreOffice Writer (9.39 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-08 10:56 UTC, wojciech
Details
Document created in MS Word and not opened in LibreOffice (13.25 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-08 10:58 UTC, wojciech
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wojciech 2022-11-08 10:52:10 UTC
Description:
A DOCX file with tracked changes, saved in MS Word and reopened in LO Writer. If a text at the end of a paragraph is moved elsewhere, LibreOffice deletes the paragraph break. 

Steps to Reproduce:
1. Create a DOCX with tracked changes in MS WOrd.
2. Move a fragment of text from the end of a paragraph to a different place (without deleting the paragraph ending mark).
3. Turn off showing tracked changes to see that the paragraph break is still there.
4. Save, close, open the file in LibreOffice.
5. Note that the paragraph break has disappeared (the paragraph we moved the text from is now connected with the next paragraph).
6. Close the file, open it again in Word.
7. Apparently the bug was saved in the file, as it is now present in Word, too.

Actual Results:
Paragraph break is deleted, as described above.

Expected Results:
Making changes inside a paragraph shouldn't affect the paragraph break.


Reproducible: Always


User Profile Reset: No

Additional Info:
--
Comment 1 wojciech 2022-11-08 10:53:49 UTC
Created attachment 183463 [details]
MS Word, original file, changes shown
Comment 2 wojciech 2022-11-08 10:54:25 UTC
Created attachment 183464 [details]
MS Word, original file, changes hidden
Comment 3 wojciech 2022-11-08 10:55:06 UTC
Created attachment 183465 [details]
File reopened in LibreOffice Writer, changes shown
Comment 4 wojciech 2022-11-08 10:55:29 UTC
Created attachment 183466 [details]
File reopened in LibreOffice Writer, changes hidden
Comment 5 wojciech 2022-11-08 10:56:38 UTC
Created attachment 183468 [details]
Document reopened in LibreOffice Writer
Comment 6 wojciech 2022-11-08 10:58:38 UTC
Created attachment 183469 [details]
Document created in MS Word and not opened in LibreOffice
Comment 7 Stéphane Guillou (stragu) 2022-11-09 11:06:58 UTC
Confirmed in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b57307e8f3553fcb292c9c11fcf58bcef3a6cb3c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Already in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 8 Commit Notification 2022-11-24 15:58:28 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/386402ded6db4614c943c94f6e68bc1de1a38fe6

tdf#151954 DOCX import: fix text moving before paragraph end

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-11-25 08:02:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/febfa2d17e43e643b7c0cc694de5be9ae2fe6ec1

tdf#151954 DOCX import: fix text moving before paragraph end

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 László Németh 2022-11-25 11:40:24 UTC
@Wojciech: thanks for the bug report!

Stéphane: thanks for your feedback!
Comment 11 NISZ LibreOffice Team 2022-11-28 09:32:58 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded