tdf#151954 DOCX import: fix text moving before paragraph end

Tracked text moving before paragraph end was extended
to the paragraph end, too.

Follow-up to commit 11071d95f4f3cbe578c3393729c42b7cce011b45
"tdf#149711 sw_redlinenum DOCX: import moveTo paragraph mark"
and commit d32d9a2b3c5e3963f4a18f6c7bbf50fab2e9b2be
"tdf#123460 DOCX track changes: moveFrom completely".

Change-Id: I668a3ef83482bded9ab94dcd0111f8ed05e8471c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143231
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>